--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-htmlview": "^0.16.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.7.2",
     "react-native-read-more-text": "^1.1.2",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-styled-components": "^2.1.0",
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0"
   },
@@ -58,7 +61,7 @@
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   },
   "jest": {
     "preset": "react-native"
